// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/AlertBanner should match snapshot 1`] = `
<div>
  <div
    class="AlertBanner info AlertBanner--sys"
  >
    <div
      class="AlertBanner__icon"
    >
      <svg
        fill="currentColor"
        height="24"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </div>
    <div
      class="AlertBanner__body"
    >
      <div
        class="AlertBanner__title"
      >
        title
      </div>
      <div
        class="AlertBanner__message"
      >
        message
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot for app variant 1`] = `
<div>
  <div
    class="AlertBanner info AlertBanner--app"
  >
    <div
      class="AlertBanner__icon"
    >
      <svg
        fill="currentColor"
        height="24"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </div>
    <div
      class="AlertBanner__body"
    >
      <div
        class="AlertBanner__title"
      >
        title
      </div>
      <div
        class="AlertBanner__message"
      >
        message
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot when buttons are passed 1`] = `
<div>
  <div
    class="AlertBanner info AlertBanner--app"
  >
    <div
      class="AlertBanner__body"
    >
      <div
        class="AlertBanner__title"
      >
        title
      </div>
      <div
        class="AlertBanner__message"
      >
        message
      </div>
      <div
        class="AlertBanner__actionButtons"
      >
        <div
          id="actionButtonLeft"
        />
        <div
          id="actionButtonRight"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot when icon disabled 1`] = `
<div>
  <div
    class="AlertBanner info AlertBanner--app"
  >
    <div
      class="AlertBanner__body"
    >
      <div
        class="AlertBanner__title"
      >
        title
      </div>
      <div
        class="AlertBanner__message"
      >
        message
      </div>
    </div>
  </div>
</div>
`;
